<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:padding="16dp">

    <!-- RadioGroup for Text Color Selection -->


    <TextView
        android:id="@+id/eb43githubio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Eugen Barilyuk     eb43.github.io"
        android:textAlignment="center"
        android:textColor="#7B7F80"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/controlRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/batvoltageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/battery_temperature_label"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appIcon"
        app:layout_constraintVertical_bias="0.168" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/temperatureRowContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/batvoltageTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="🌡 -1 ℃ "
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/temperatureScaleSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:minWidth="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            app:layout_constraintStart_toEndOf="@id/temperatureTextView"
            app:layout_constraintTop_toTopOf="@id/temperatureTextView"
            app:layout_constraintBottom_toBottomOf="@id/temperatureTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <barilyuk.batterytemperature.RollingChartView
        android:id="@+id/tempChart"
        android:layout_width="344dp"
        android:layout_height="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureRowContainer" />

    <LinearLayout
        android:id="@+id/parent_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempChart">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_for_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/durationEditText"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:hint="1"
            android:inputType="number"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/timeUnitSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <Button
            android:id="@+id/startStopLoggingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_logging" />

    </LinearLayout>

    <TextView
        android:id="@+id/logFilePathTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?android:attr/colorBackground"
        android:fontFamily="monospace"
        android:padding="6dp"
        android:text="@string/logfilepath"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="10sp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_linear_layout" />

    <LinearLayout
        android:id="@+id/temperatureAlarmRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logFilePathTextView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ring_alarm_at"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/temperatureThresholdEditText"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:hint="50"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loggerTempScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" °C"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/enableTempAlarmCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/enable_temperature_alarm"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/controlRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <!-- Auto Start Checkbox -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start">
        <CheckBox
            android:id="@+id/autostartCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="5sp"
            android:autoSizeTextType="uniform"
            android:text="@string/enable_auto_start"
            />
    </LinearLayout>

        <!-- Kill Exit Button -->
        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:autoSizeMaxTextSize="27sp"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorOnPrimary"
            android:layoutDirection="inherit"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/kill_app_exit"
            android:textAlignment="center"
            />

        <!-- RadioGroup stacked vertically -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end">
        <RadioGroup
            android:id="@+id/textColorRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/radioLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/notification_icon_text_color"
                />

            <RadioButton
                android:id="@+id/radioBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/black" />

            <RadioButton
                android:id="@+id/radioWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/white" />
        </RadioGroup>
    </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>